--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 		              <li><span class="fa fa-check mr-2"></span>1 closet organization</li>
 		            </ul>
 
-		            <a href="https://wa.link/8a3bux" class="btn btn-primary px-4 py-3">Get Started</a>
+		            <a href="https://wa.link/m141rz" class="btn btn-primary px-4 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
@@ -248,7 +248,7 @@
 		              <li><span class="fa fa-check mr-2"></span>1 Carpet cleaning</li>
 		            </ul>
 
-	            <a href="https://wa.link/8a3bux" class="btn btn-primary px-4 py-3">Get Started</a>
+	            <a href="https://wa.link/m141rz" class="btn btn-primary px-4 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
@@ -267,7 +267,7 @@
 					<li><span class="fa fa-check mr-2"></span>Sofa cleaning</li>
 		            </ul>
 
-	            <a href="https://wa.link/8a3bux" class="btn btn-primary px-4 py-3">Get Started</a>
+	            <a href="https://wa.link/m141rz" class="btn btn-primary px-4 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
