--- a/pricing.html
+++ b/pricing.html
@@ -82,7 +82,7 @@
 		              <li><span class="fa fa-check mr-2"></span>1 closet organization</li>
 		            </ul>
 
-		            <a href="https://wa.link/8a3bux" class="btn btn-primary px-4 py-3">Get Started</a>
+		            <a href="https://wa.link/m141rz" class="btn btn-primary px-4 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
@@ -100,7 +100,7 @@
 		              <li><span class="fa fa-check mr-2"></span>1 Carpet cleaning</li>
 		            </ul>
 
-	            <a href="https://wa.link/8a3bux" class="btn btn-primary px-4 py-3">Get Started</a>
+	            <a href="https://wa.link/m141rz" class="btn btn-primary px-4 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
@@ -119,7 +119,7 @@
 					<li><span class="fa fa-check mr-2"></span>Sofa cleaning</li>
 		            </ul>
 
-	            <a href="https://wa.link/8a3bux" class="btn btn-primary px-4 py-3">Get Started</a>
+	            <a href="https://wa.link/m141rz" class="btn btn-primary px-4 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
